--- a/app/src/main/res/layout/activity_start_menu.xml
+++ b/app/src/main/res/layout/activity_start_menu.xml
@@ -14,5 +14,66 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.pollo.madtownscouting2017.StartMenu">
 
+    <EditText
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:id="@+id/searchMenuSearchBox"
+        android:layout_toLeftOf="@id/searchButton"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:hint="Ex. Team 1323" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Search"
+        android:id="@+id/searchButton"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Scout"
+        android:id="@+id/scoutButton"
+        android:layout_below="@+id/searchButton"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Upload"
+        android:id="@+id/uploadData"
+        android:layout_below="@+id/scoutButton"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Teams"
+        android:id="@+id/teamsView"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/uploadData"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add Photo"
+        android:id="@+id/addPhoto"
+        android:layout_alignRight="@+id/teamsView"
+        android:layout_below="@+id/teamsView" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="View Photos"
+        android:id="@+id/viewPhoto"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/addPhoto" />
+
 </RelativeLayout>
 </ScrollView>
