--- a/app/src/main/res/layout/activity_start_menu.xml
+++ b/app/src/main/res/layout/activity_start_menu.xml
@@ -18,7 +18,7 @@
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:id="@+id/searchMenuSearchBox"
-        android:layout_toLeftOf="@id/searchButton"
+        android:layout_toLeftOf="@+id/searchButton"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
