--- a/app/src/main/res/layout/activity_scouting_menu.xml
+++ b/app/src/main/res/layout/activity_scouting_menu.xml
@@ -72,4 +72,13 @@
         android:layout_alignStart="@+id/matchNumberEditText"
         android:hint="Blue or Red" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Start"
+        android:id="@+id/startScoutingButton"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/teamColorEditText"
+        android:layout_alignEnd="@+id/teamColorEditText" />
+
 </RelativeLayout>
