--- a/app/src/main/res/layout/activity_auto_period.xml
+++ b/app/src/main/res/layout/activity_auto_period.xml
@@ -9,4 +9,111 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.pollo.madtownscouting2017.AutoPeriod">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Autonomous Period"
+        android:id="@+id/autoTextView"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Baseline Crossed?"
+        android:id="@+id/baselineCheckBox"
+        android:layout_marginTop="30dp"
+        android:layout_below="@+id/autoTextView"
+        android:layout_centerHorizontal="true"
+        android:checked="false" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Attempted to place gear?"
+        android:id="@+id/gearAttemptCheckBox"
+        android:layout_below="@+id/baselineCheckBox"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:checked="false" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Gear successfully placed?"
+        android:id="@+id/gearSuccessCheckBox"
+        android:layout_below="@+id/gearAttemptCheckBox"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:checked="false" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="High goal?"
+        android:id="@+id/highCheckBox"
+        android:layout_marginTop="33dp"
+        android:checked="false"
+        android:layout_below="@+id/gearSuccessCheckBox"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Low goal?"
+        android:id="@+id/lowCheckBox"
+        android:layout_alignTop="@+id/highCheckBox"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:checked="false" />
+
+    <SeekBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/autoBallsSeekBar"
+        android:layout_below="@+id/lowCheckBox"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="31dp"
+        android:max="10"
+        android:progress="0"
+        android:indeterminate="false"
+        android:minWidth="250dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="0"
+        android:id="@+id/zeroTextView"
+        android:layout_below="@+id/autoBallsSeekBar"
+        android:layout_alignLeft="@+id/autoBallsSeekBar"
+        android:layout_alignStart="@+id/autoBallsSeekBar" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="10"
+        android:id="@+id/tenTextView"
+        android:layout_alignBottom="@+id/zeroTextView"
+        android:layout_toRightOf="@+id/zeroTextView"
+        android:layout_marginLeft="250dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Balls Made: 0"
+        android:id="@+id/ballCountTextView"
+        android:layout_below="@+id/autoBallsSeekBar"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Continue"
+        android:id="@+id/continueButton"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
