Fixed the arrangement of the buttons in teleop page and the size of text.

--- a/app/src/main/res/layout/activity_teleop_period.xml
+++ b/app/src/main/res/layout/activity_teleop_period.xml
@@ -13,129 +13,127 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text=" Teleoperated Period"
+        android:text="Gears Picked Up:"
+        android:id="@+id/gearsPickedUpTextView"
+        android:layout_marginTop="25dp"
+        android:layout_below="@+id/teleopPeriodTextView"
+        android:layout_alignRight="@+id/gearsDroppedTextView"
+        android:layout_alignEnd="@+id/gearsDroppedTextView" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Teleoperated Period"
         android:id="@+id/teleopPeriodTextView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Gears Picked Up:"
-        android:id="@+id/gearsPickedUpTextView"
-        android:layout_below="@+id/teleopPeriodTextView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="25dp" />
-
     <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="+"
-        android:id="@+id/increasePickedUpGearButton"
-        android:layout_below="@+id/gearsPickedUpTextView"
-        android:layout_alignLeft="@+id/teleopPeriodTextView"
-        android:layout_alignStart="@+id/teleopPeriodTextView" />
-
-    <Button
-        style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="-"
-        android:id="@+id/decreasePickedUpGearsButton"
-        android:layout_alignBottom="@+id/pickedUpGearsTextView"
-        android:layout_alignRight="@+id/teleopPeriodTextView"
-        android:layout_alignEnd="@+id/teleopPeriodTextView" />
+        android:id="@+id/decreaseGearsPickedUpButton"
+        android:layout_below="@+id/gearsPickedUpTextView"
+        android:layout_toLeftOf="@+id/gearsPickedUpTextView"
+        android:layout_toStartOf="@+id/gearsPickedUpTextView"
+        android:paddingTop="2dp"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="+"
+        android:id="@+id/increaseGearsPickedUpButton"
+        android:layout_alignTop="@+id/decreaseGearsPickedUpButton"
+        android:layout_toRightOf="@+id/gearsPickedUpTextView"
+        android:layout_toEndOf="@+id/gearsPickedUpTextView"
+        android:paddingTop="2dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="0"
-        android:id="@+id/pickedUpGearsTextView"
-        android:layout_alignBottom="@+id/increasePickedUpGearButton"
+        android:id="@+id/amountGearsPickedUpTextView"
+        android:layout_alignBottom="@+id/decreaseGearsPickedUpButton"
         android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Gears Dropped:"
         android:id="@+id/gearsDroppedTextView"
-        android:layout_below="@+id/increasePickedUpGearButton"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="25dp" />
+        android:layout_below="@+id/increaseGearsPickedUpButton"
+        android:layout_centerHorizontal="true"
+        android:paddingTop="10dp"/>
 
     <Button
-        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="-"
+        android:id="@+id/decreaseGearsDroppedButton"
+        android:layout_below="@+id/gearsDroppedTextView"
+        android:layout_alignRight="@+id/decreaseGearsPickedUpButton"
+        android:layout_alignEnd="@+id/decreaseGearsPickedUpButton"
+        android:paddingTop="2dp"/>
+
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="+"
         android:id="@+id/increaseGearsDroppedButton"
         android:layout_below="@+id/gearsDroppedTextView"
-        android:layout_alignLeft="@+id/increasePickedUpGearButton"
-        android:layout_alignStart="@+id/increasePickedUpGearButton" />
+        android:layout_alignLeft="@+id/increaseGearsPickedUpButton"
+        android:layout_alignStart="@+id/increaseGearsPickedUpButton"
+        android:paddingTop="2dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="0"
+        android:id="@+id/amountGearsDroppedTextView"
+        android:layout_alignBottom="@+id/increaseGearsDroppedButton"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Gears Placed:"
+        android:id="@+id/gearsPlacedTextView"
+        android:layout_below="@+id/decreaseGearsDroppedButton"
+        android:layout_centerHorizontal="true"
+        android:paddingTop="10dp"/>
 
     <Button
-        style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="-"
-        android:id="@+id/desceaseGearsDroppedButton"
-        android:layout_alignBottom="@+id/increaseGearsDroppedButton"
-        android:layout_alignLeft="@+id/decreasePickedUpGearsButton"
-        android:layout_alignStart="@+id/decreasePickedUpGearsButton" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="0"
-        android:id="@+id/droppedGearsTextView"
-        android:layout_alignBottom="@+id/increaseGearsDroppedButton"
-        android:layout_alignLeft="@+id/pickedUpGearsTextView"
-        android:layout_alignStart="@+id/pickedUpGearsTextView" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Gears Placed"
-        android:id="@+id/gearsPlacedTextView"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:id="@+id/decreaseGearsPlacedButton"
+        android:layout_below="@+id/gearsPlacedTextView"
+        android:layout_alignRight="@+id/decreaseGearsDroppedButton"
+        android:layout_alignEnd="@+id/decreaseGearsDroppedButton"
+        android:paddingTop="2dp"/>
 
     <Button
-        style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="+"
         android:id="@+id/increaseGearsPlacedButton"
         android:layout_below="@+id/gearsPlacedTextView"
         android:layout_alignLeft="@+id/increaseGearsDroppedButton"
-        android:layout_alignStart="@+id/increaseGearsDroppedButton" />
-
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="-"
-        android:id="@+id/decreaseGearsPlacedButton"
-        android:layout_alignBottom="@+id/increaseGearsPlacedButton"
-        android:layout_alignLeft="@+id/desceaseGearsDroppedButton"
-        android:layout_alignStart="@+id/desceaseGearsDroppedButton" />
+        android:layout_alignStart="@+id/increaseGearsDroppedButton"
+        android:paddingTop="2dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="0"
-        android:id="@+id/placedGearsTextView"
-        android:layout_alignBottom="@+id/decreaseGearsPlacedButton"
+        android:id="@+id/amountGearsPlacedTextView"
+        android:layout_alignBottom="@+id/increaseGearsPlacedButton"
         android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
