Fixed sizing on scouting menu

--- a/app/src/main/res/layout-xlarge/activity_scouting_menu.xml
+++ b/app/src/main/res/layout-xlarge/activity_scouting_menu.xml
@@ -11,16 +11,17 @@
 
     <TextView
         android:layout_width="150dp"
-        android:layout_height="25dp"
+        android:layout_height="50dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Team Number"
+        android:text="Team Number:"
         android:id="@+id/teamNumberTextView"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_toStartOf="@+id/teamNumberEditText"
         android:layout_toLeftOf="@+id/teamNumberEditText"
-        android:textSize="25sp" />
+        android:textSize="40sp"
+        android:paddingTop="5dp"/>
 
     <EditText
         android:layout_width="350dp"
@@ -29,22 +30,25 @@
         android:ems="10"
         android:id="@+id/teamNumberEditText"
         android:hint="Ex. 1323"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
         android:elegantTextHeight="false"
-        android:textSize="30sp" />
+        android:textSize="40sp"
+        android:layout_below="@+id/teamNumberTextView"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <TextView
         android:layout_width="150dp"
-        android:layout_height="25dp"
+        android:layout_height="50dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Match Number"
+        android:text="Match Number:"
         android:id="@+id/matchNumberTextView"
         android:layout_below="@+id/teamNumberEditText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:textSize="25sp" />
+        android:textSize="40sp"
+        android:layout_toStartOf="@+id/blueCheckBox"
+        android:layout_alignRight="@+id/blueCheckBox"
+        android:layout_alignEnd="@+id/blueCheckBox" />
 
     <EditText
         android:layout_width="350dp"
@@ -52,22 +56,24 @@
         android:inputType="number"
         android:ems="10"
         android:id="@+id/matchNumberEditText"
-        android:layout_below="@+id/teamNumberEditText"
-        android:layout_alignRight="@+id/teamNumberEditText"
-        android:layout_alignEnd="@+id/teamNumberEditText"
         android:hint="Ex. 12"
-        android:textSize="30sp" />
+        android:textSize="40sp"
+        android:layout_below="@+id/matchNumberTextView"
+        android:layout_alignLeft="@+id/teamNumberEditText"
+        android:layout_alignStart="@+id/teamNumberEditText" />
 
     <TextView
         android:layout_width="150dp"
-        android:layout_height="25dp"
+        android:layout_height="50dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Team Color"
+        android:text="Team Color:"
         android:id="@+id/teamColorTextView"
         android:layout_below="@+id/matchNumberEditText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:textSize="25sp" />
+        android:textSize="40sp"
+        android:layout_toLeftOf="@+id/blueCheckBox"
+        android:layout_toStartOf="@+id/blueCheckBox" />
 
     <Button
         android:layout_width="wrap_content"
@@ -77,25 +83,30 @@
         android:layout_alignParentBottom="true"
         android:layout_alignRight="@+id/matchNumberEditText"
         android:layout_alignEnd="@+id/matchNumberEditText"
-        android:textSize="30sp" />
+        android:textSize="40sp"
+        android:paddingRight="15dp"/>
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Blue"
         android:id="@+id/blueCheckBox"
-        android:layout_below="@+id/teamColorTextView"
-        android:layout_marginLeft="200dp"
-        android:textSize="25sp" />
+        android:textSize="40sp"
+        android:layout_marginRight="75dp"
+        android:layout_marginEnd="75dp"
+        android:layout_alignTop="@+id/redCheckBox"
+        android:layout_toLeftOf="@+id/redCheckBox"
+        android:layout_toStartOf="@+id/redCheckBox" />
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Red"
         android:id="@+id/redCheckBox"
-        android:layout_alignTop="@+id/blueCheckBox"
-        android:layout_toRightOf="@+id/blueCheckBox"
-        android:layout_toEndOf="@+id/blueCheckBox"
-        android:textSize="25sp" />
+        android:textSize="40sp"
+        android:layout_below="@+id/teamColorTextView"
+        android:layout_alignLeft="@+id/matchNumberEditText"
+        android:layout_alignStart="@+id/matchNumberEditText"
+        android:layout_marginTop="51dp" />
 
 </RelativeLayout>
