--- a/app/src/main/res/layout/activity_tabbed_scouting.xml
+++ b/app/src/main/res/layout/activity_tabbed_scouting.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.pollo.madtownscouting2017.ScoutingTabbed">
+    tools:context="com.example.pollo.madtownscouting2017.TabbedScouting">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
@@ -24,6 +24,11 @@
             app:popupTheme="@style/AppTheme.PopupOverlay">
 
         </android.support.v7.widget.Toolbar>
+
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tabs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
     </android.support.design.widget.AppBarLayout>
 
