--- a/app/src/main/res/layout/activity_add_photo.xml
+++ b/app/src/main/res/layout/activity_add_photo.xml
@@ -9,4 +9,65 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.pollo.madtownscouting2017.addPhoto">
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Camera"
+        android:id="@+id/camButton"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Camera Roll"
+        android:id="@+id/cameraRollButton"
+        android:layout_below="@+id/camButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="25dp" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="7"
+        android:id="@+id/photoNumberEditText"
+        android:layout_marginTop="25dp"
+        android:layout_below="@+id/cameraRollButton"
+        android:layout_centerHorizontal="true"
+        android:hint="Picture&apos;s Team #" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView"
+        android:layout_below="@+id/photoNumberEditText"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Save Picture"
+        android:id="@+id/savePicButton"
+        android:layout_alignBottom="@+id/photoNumberEditText"
+        android:layout_toRightOf="@+id/photoNumberEditText"
+        android:layout_toEndOf="@+id/photoNumberEditText" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButton"
+        android:src="@drawable/ic_rotate"
+        android:layout_below="@+id/photoNumberEditText"
+        android:layout_centerHorizontal="true" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/Home"
+        android:src="@drawable/ic_action_name"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
