--- a/app/src/main/res/layout/activity_auto_period.xml
+++ b/app/src/main/res/layout/activity_auto_period.xml
@@ -71,7 +71,7 @@
 
     <SeekBar
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:id="@+id/autoBallsSeekBar"
         android:layout_below="@+id/lowCheckBox"
         android:layout_centerHorizontal="true"
