--- a/app/src/main/res/layout/activity_picture_list.xml
+++ b/app/src/main/res/layout/activity_picture_list.xml
@@ -7,6 +7,13 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.pollo.madtownscouting2017.viewPhotos">
+    tools:context="com.example.pollo.madtownscouting2017.PictureList">
 
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/pictureListView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
