--- a/app/src/main/res/layout/activity_picture_list.xml
+++ b/app/src/main/res/layout/activity_picture_list.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.pollo.madtownscouting2017.PictureList">
+    tools:context="com.example.pollo.madtownscouting2017.TeamPictureSelection">
 
     <ListView
         android:layout_width="wrap_content"
