--- a/app/src/main/res/layout/activity_team_picture_selection.xml
+++ b/app/src/main/res/layout/activity_team_picture_selection.xml
@@ -7,12 +7,12 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.pollo.madtownscouting2017.PictureList">
+    tools:context="com.example.pollo.madtownscouting2017.TeamPictureSelection">
 
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/pictureListView"
+        android:id="@+id/TeamPicturesListView"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
