--- a/app/src/main/res/layout-xlarge-port/auto_period_fragment.xml
+++ b/app/src/main/res/layout-xlarge-port/auto_period_fragment.xml
@@ -15,7 +15,8 @@
         android:text="Autonomous Period"
         android:id="@+id/autoTextView"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="40sp"/>
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -25,17 +26,20 @@
         android:layout_marginTop="30dp"
         android:layout_below="@+id/autoTextView"
         android:layout_centerHorizontal="true"
-        android:checked="false" />
+        android:checked="false"
+        android:textSize="30sp"/>
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Attempted to place gear?"
         android:id="@+id/gearAttemptCheckBox"
+        android:layout_marginTop="50dp"
+        android:checked="false"
+        android:textSize="30sp"
         android:layout_below="@+id/baselineCheckBox"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
-        android:checked="false" />
+        android:layout_toRightOf="@+id/zeroTextView"
+        android:layout_toEndOf="@+id/zeroTextView" />
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -44,37 +48,40 @@
         android:id="@+id/gearSuccessCheckBox"
         android:layout_below="@+id/gearAttemptCheckBox"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
-        android:checked="false" />
+        android:layout_marginTop="50dp"
+        android:checked="false"
+        android:textSize="30sp"/>
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="High goal?"
         android:id="@+id/highCheckBox"
-        android:layout_marginTop="33dp"
+        android:layout_marginTop="50dp"
         android:checked="false"
+        android:textSize="30sp"
         android:layout_below="@+id/gearSuccessCheckBox"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_toLeftOf="@+id/baselineCheckBox"
+        android:layout_toStartOf="@+id/baselineCheckBox" />
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Low goal?"
         android:id="@+id/lowCheckBox"
+        android:checked="false"
+        android:textSize="30sp"
         android:layout_alignTop="@+id/highCheckBox"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:checked="false" />
+        android:layout_toRightOf="@+id/baselineCheckBox"
+        android:layout_toEndOf="@+id/baselineCheckBox" />
 
     <SeekBar
-        android:layout_width="wrap_content"
+        android:layout_width="400dp"
         android:layout_height="wrap_content"
         android:id="@+id/autoBallsSeekBar"
         android:layout_below="@+id/lowCheckBox"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="31dp"
+        android:layout_marginTop="50dp"
         android:max="10"
         android:progress="0"
         android:indeterminate="false"
@@ -88,7 +95,8 @@
         android:id="@+id/zeroTextView"
         android:layout_below="@+id/autoBallsSeekBar"
         android:layout_alignLeft="@+id/autoBallsSeekBar"
-        android:layout_alignStart="@+id/autoBallsSeekBar" />
+        android:layout_alignStart="@+id/autoBallsSeekBar"
+        android:textSize="30sp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -96,9 +104,10 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="10"
         android:id="@+id/tenTextView"
-        android:layout_alignBottom="@+id/zeroTextView"
-        android:layout_toRightOf="@+id/zeroTextView"
-        android:layout_marginLeft="250dp"/>
+        android:textSize="30sp"
+        android:layout_below="@+id/autoBallsSeekBar"
+        android:layout_toRightOf="@+id/autoBallsSeekBar"
+        android:layout_toEndOf="@+id/autoBallsSeekBar" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -106,6 +115,7 @@
         android:text="Balls Made: 0"
         android:id="@+id/ballCountTextView"
         android:layout_below="@+id/autoBallsSeekBar"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="30sp"/>
 
 </RelativeLayout>
