--- a/app/src/main/res/layout-xlarge-land/auto_period_fragment.xml
+++ b/app/src/main/res/layout-xlarge-land/auto_period_fragment.xml
@@ -15,7 +15,8 @@
         android:text="Autonomous Period"
         android:id="@+id/autoTextView"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="40sp"/>
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -25,7 +26,8 @@
         android:layout_marginTop="30dp"
         android:layout_below="@+id/autoTextView"
         android:layout_centerHorizontal="true"
-        android:checked="false" />
+        android:checked="false"
+        android:textSize="30sp"/>
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -35,7 +37,8 @@
         android:layout_below="@+id/baselineCheckBox"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
-        android:checked="false" />
+        android:checked="false"
+        android:textSize="30sp"/>
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -45,7 +48,8 @@
         android:layout_below="@+id/gearAttemptCheckBox"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
-        android:checked="false" />
+        android:checked="false"
+        android:textSize="30sp"/>
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -56,7 +60,9 @@
         android:checked="false"
         android:layout_below="@+id/gearSuccessCheckBox"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="250dp"
+        android:textSize="30sp"/>
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -66,7 +72,9 @@
         android:layout_alignTop="@+id/highCheckBox"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:checked="false" />
+        android:checked="false"
+        android:layout_marginRight="250dp"
+        android:textSize="30sp"/>
 
     <SeekBar
         android:layout_width="wrap_content"
@@ -78,7 +86,7 @@
         android:max="10"
         android:progress="0"
         android:indeterminate="false"
-        android:minWidth="250dp" />
+        android:minWidth="450dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -88,7 +96,8 @@
         android:id="@+id/zeroTextView"
         android:layout_below="@+id/autoBallsSeekBar"
         android:layout_alignLeft="@+id/autoBallsSeekBar"
-        android:layout_alignStart="@+id/autoBallsSeekBar" />
+        android:layout_alignStart="@+id/autoBallsSeekBar"
+        android:textSize="20sp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -97,8 +106,8 @@
         android:text="10"
         android:id="@+id/tenTextView"
         android:layout_alignBottom="@+id/zeroTextView"
-        android:layout_toRightOf="@+id/zeroTextView"
-        android:layout_marginLeft="250dp"/>
+        android:layout_toRightOf="@+id/autoBallsSeekBar"
+        android:textSize="20sp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -106,6 +115,7 @@
         android:text="Balls Made: 0"
         android:id="@+id/ballCountTextView"
         android:layout_below="@+id/autoBallsSeekBar"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="20sp"/>
 
 </RelativeLayout>
