--- a/app/src/main/res/layout-land/auto_period_fragment.xml
+++ b/app/src/main/res/layout-land/auto_period_fragment.xml
@@ -15,17 +15,19 @@
         android:text="Autonomous Period"
         android:id="@+id/autoTextView"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="20sp"/>
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Baseline Crossed?"
         android:id="@+id/baselineCheckBox"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         android:layout_below="@+id/autoTextView"
         android:layout_centerHorizontal="true"
-        android:checked="false" />
+        android:checked="false"
+        android:textSize="10sp"/>
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -34,8 +36,9 @@
         android:id="@+id/gearAttemptCheckBox"
         android:layout_below="@+id/baselineCheckBox"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
-        android:checked="false" />
+        android:layout_marginTop="10dp"
+        android:checked="false"
+        android:textSize="10sp"/>
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -44,19 +47,21 @@
         android:id="@+id/gearSuccessCheckBox"
         android:layout_below="@+id/gearAttemptCheckBox"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
-        android:checked="false" />
+        android:layout_marginTop="10dp"
+        android:checked="false"
+        android:textSize="10sp"/>
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="High goal?"
         android:id="@+id/highCheckBox"
-        android:layout_marginTop="33dp"
+        android:layout_marginTop="10dp"
         android:checked="false"
         android:layout_below="@+id/gearSuccessCheckBox"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textSize="10sp"/>
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -66,7 +71,8 @@
         android:layout_alignTop="@+id/highCheckBox"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:checked="false" />
+        android:checked="false"
+        android:textSize="10sp"/>
 
     <SeekBar
         android:layout_width="wrap_content"
@@ -74,7 +80,7 @@
         android:id="@+id/autoBallsSeekBar"
         android:layout_below="@+id/lowCheckBox"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="31dp"
+        android:layout_marginTop="10dp"
         android:max="10"
         android:progress="0"
         android:indeterminate="false"
@@ -106,6 +112,7 @@
         android:text="Balls Made: 0"
         android:id="@+id/ballCountTextView"
         android:layout_below="@+id/autoBallsSeekBar"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="10sp"/>
 
 </RelativeLayout>
