--- a/app/src/main/res/layout-xlarge-port/teleop_fragment.xml
+++ b/app/src/main/res/layout-xlarge-port/teleop_fragment.xml
@@ -18,7 +18,8 @@
         android:layout_marginTop="25dp"
         android:layout_below="@+id/teleopPeriodTextView"
         android:layout_alignRight="@+id/gearsDroppedTextView"
-        android:layout_alignEnd="@+id/gearsDroppedTextView" />
+        android:layout_alignEnd="@+id/gearsDroppedTextView"
+        android:textSize="30sp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -26,9 +27,9 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Teleoperated Period"
         android:id="@+id/teleopPeriodTextView"
-        android:layout_marginTop="64dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="40sp"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -57,7 +58,8 @@
         android:text="0"
         android:id="@+id/amountGearsPickedUpTextView"
         android:layout_alignBottom="@+id/decreaseGearsPickedUpButton"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="25sp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -67,7 +69,8 @@
         android:id="@+id/gearsDroppedTextView"
         android:layout_below="@+id/increaseGearsPickedUpButton"
         android:layout_centerHorizontal="true"
-        android:paddingTop="10dp"/>
+        android:paddingTop="10dp"
+        android:textSize="30sp"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -96,7 +99,8 @@
         android:text="0"
         android:id="@+id/amountGearsDroppedTextView"
         android:layout_alignBottom="@+id/increaseGearsDroppedButton"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="25sp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -106,7 +110,8 @@
         android:id="@+id/gearsPlacedTextView"
         android:layout_below="@+id/decreaseGearsDroppedButton"
         android:layout_centerHorizontal="true"
-        android:paddingTop="10dp"/>
+        android:paddingTop="10dp"
+        android:textSize="30sp"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -135,6 +140,7 @@
         android:text="0"
         android:id="@+id/amountGearsPlacedTextView"
         android:layout_alignBottom="@+id/increaseGearsPlacedButton"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="25sp"/>
 
 </RelativeLayout>
