--- a/app/src/main/res/layout/auto_period_fragment.xml
+++ b/app/src/main/res/layout/auto_period_fragment.xml
@@ -72,13 +72,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/autoBallsSeekBar"
-        android:layout_below="@+id/lowCheckBox"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="48dp"
         android:max="10"
         android:progress="0"
         android:indeterminate="false"
-        android:minWidth="250dp" />
+        android:minWidth="250dp"
+        android:layout_below="@+id/highCheckBox"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
