--- a/app/src/main/res/layout/teleop_fragment.xml
+++ b/app/src/main/res/layout/teleop_fragment.xml
@@ -15,10 +15,11 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Gears Picked Up:"
         android:id="@+id/gearsPickedUpTextView"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="15dp"
         android:layout_below="@+id/teleopPeriodTextView"
         android:layout_alignRight="@+id/gearsDroppedTextView"
-        android:layout_alignEnd="@+id/gearsDroppedTextView" />
+        android:layout_alignEnd="@+id/gearsDroppedTextView"
+        android:textSize="15sp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -26,13 +27,12 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Teleoperated Period"
         android:id="@+id/teleopPeriodTextView"
-        android:layout_marginTop="64dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="65dp"
+        android:layout_height="40dp"
         android:text="-"
         android:id="@+id/decreaseGearsPickedUpButton"
         android:layout_below="@+id/gearsPickedUpTextView"
@@ -41,8 +41,8 @@
         android:paddingTop="2dp"/>
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="65dp"
+        android:layout_height="40dp"
         android:text="+"
         android:id="@+id/increaseGearsPickedUpButton"
         android:layout_alignTop="@+id/decreaseGearsPickedUpButton"
@@ -57,7 +57,8 @@
         android:text="0"
         android:id="@+id/amountGearsPickedUpTextView"
         android:layout_alignBottom="@+id/decreaseGearsPickedUpButton"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="15sp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -67,11 +68,12 @@
         android:id="@+id/gearsDroppedTextView"
         android:layout_below="@+id/increaseGearsPickedUpButton"
         android:layout_centerHorizontal="true"
-        android:paddingTop="10dp"/>
+        android:paddingTop="10dp"
+        android:textSize="15sp"/>
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="65dp"
+        android:layout_height="40dp"
         android:text="-"
         android:id="@+id/decreaseGearsDroppedButton"
         android:layout_below="@+id/gearsDroppedTextView"
@@ -80,8 +82,8 @@
         android:paddingTop="2dp"/>
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="65dp"
+        android:layout_height="40dp"
         android:text="+"
         android:id="@+id/increaseGearsDroppedButton"
         android:layout_below="@+id/gearsDroppedTextView"
@@ -96,7 +98,8 @@
         android:text="0"
         android:id="@+id/amountGearsDroppedTextView"
         android:layout_alignBottom="@+id/increaseGearsDroppedButton"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="15sp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -106,11 +109,12 @@
         android:id="@+id/gearsPlacedTextView"
         android:layout_below="@+id/decreaseGearsDroppedButton"
         android:layout_centerHorizontal="true"
-        android:paddingTop="10dp"/>
+        android:paddingTop="10dp"
+        android:textSize="15sp"/>
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="65dp"
+        android:layout_height="40dp"
         android:text="-"
         android:id="@+id/decreaseGearsPlacedButton"
         android:layout_below="@+id/gearsPlacedTextView"
@@ -119,8 +123,8 @@
         android:paddingTop="2dp"/>
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="65dp"
+        android:layout_height="40dp"
         android:text="+"
         android:id="@+id/increaseGearsPlacedButton"
         android:layout_below="@+id/gearsPlacedTextView"
@@ -135,6 +139,7 @@
         android:text="0"
         android:id="@+id/amountGearsPlacedTextView"
         android:layout_alignBottom="@+id/increaseGearsPlacedButton"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="15sp"/>
 
 </RelativeLayout>
